# ASR

./: dev.py  dupa.py  gmm.py  gmm_handler.py  gmm_implementation.py  import_processing.py  our_hmm.py  pyproject.toml  recognize.py  test.py  testing.py  tt.py
gmm_data/: five.txt  four.txt  one.txt  three.txt  two.txt
