[tool.poetry]
name = "ASR"
version = "0.1.0"
description = "Automatic speech recognition package, created as an assignment guidance of professor Radecki."
authors = ["Jan Pierzchala"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
